--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -1,3 +1,8 @@
+* {
+  box-sizing: border-box;
+  margin: 0 auto;
+}
+
 body {
   background: #eee;
   font-family: sans-serif;
@@ -7,21 +12,32 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  border: 8px solid white;
+  padding: 0;
 }
 
 .title {
   background: #e3f4ff;
+  font-size: 1rem;
+  border-bottom: 8px solid white;
+  padding: 8px;
 }
 
 .content {
   background: #e3f4ff;
+  border-bottom: 8px solid white;
+  padding: 15px 8px;
 }
 
 .button-container {
   background: #e3f4ff;
+  padding: 8px;
+  text-align: center;
 }
 
 button {
+  display: block;
   background: white;
   border: 1px solid #eee;
+  padding: 8px 25px;
 }
