--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,27 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  padding: 10px;
+}
+
+.left-links, 
+.right-links, 
+.links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.right-links {
+  margin-left: auto;
+  gap: 15px;
+}
+.left-links {
+  justify-content: space-around;
+  gap: 15px;
+}
+.links {
+  gap: 15px;
 }
 
 .profile-image {
@@ -45,4 +66,6 @@ a {
 
 ul {
   list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
