--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,9 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 img {
@@ -16,6 +19,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: .5rem;
 }
 
 input {
@@ -24,4 +28,34 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.header, .footer, .left-links, .right-links {
+  display: flex;
+  padding: .5rem;
+  gap: 1rem;
+  font-size: .75rem;
+  /* border: 1px solid rebeccapurple; */
+}
+.right-links {
+  margin-left: auto;
+}
+.content {
+  border: 1px solid rebeccapurple;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.footer {
+  background-color: #eeeeee;
 }
