animation exercises 2 and 3

--- a/animation/03-dropdown-menu/style.css
+++ b/animation/03-dropdown-menu/style.css
@@ -27,6 +27,26 @@ ul.dropdown-menu li:hover {
 
 .visible {
   display: block;
+  transform-origin: top;
+  animation: .5s bounce;
+}
+
+@keyframes bounce {
+  0% {
+    transform: scaleY(0);
+  }
+
+  33% {
+    transform: scaleY(.33);
+  }
+
+  66% {
+    transform: scaleY(1.25);
+  }
+
+  100% {
+    transform: scaleY(1);
+  }
 }
 
 
