--- a/animation/02-pop-up/style.css
+++ b/animation/02-pop-up/style.css
@@ -35,10 +35,11 @@ button {
   top: 50%;
   left: 50%;
   transform-origin: center;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -300px);
   pointer-events: none;
   opacity: 0%;
   text-align: center;
+  transition: transform 1s, opacity .5s;
 }
 .popup-modal p {
   margin-bottom: 24px
@@ -55,6 +56,7 @@ button {
 .popup-modal.show {
   opacity: 100%;
   pointer-events: all;
+  transform: translate(-50%, -50%);
 }
 
 .backdrop.show {
